// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`run: should create table 1`] = `
Array [
  "CREATE TABLE IF NOT EXISTS matomo
  (
    idsite                      text,
    idvisit                     text,
    actions                     text,
    country                     text,
    region                      text,
    city                        text,
    operatingsystemname         text,
    devicemodel                 text,
    devicebrand                 text,
    visitduration               text,
    dayssincefirstvisit         text,
    visitortype                 text,
    sitename                    text,
    userid                      text,
    serverdateprettyfirstaction date,
    action_id                   text UNIQUE,
    action_type                 text,
    action_eventcategory        text,
    action_eventaction          text,
    action_eventname            text,
    action_eventvalue           text,
    action_timespent            text,
    action_timestamp            timestamp with time zone,
    usercustomproperties        json
)",
  Array [],
]
`;

exports[`run: should use today date if nothing in DB 1`] = `
Array [
  Array [
    "CREATE TABLE IF NOT EXISTS matomo
  (
    idsite                      text,
    idvisit                     text,
    actions                     text,
    country                     text,
    region                      text,
    city                        text,
    operatingsystemname         text,
    devicemodel                 text,
    devicebrand                 text,
    visitduration               text,
    dayssincefirstvisit         text,
    visitortype                 text,
    sitename                    text,
    userid                      text,
    serverdateprettyfirstaction date,
    action_id                   text UNIQUE,
    action_type                 text,
    action_eventcategory        text,
    action_eventaction          text,
    action_eventname            text,
    action_eventvalue           text,
    action_timespent            text,
    action_timestamp            timestamp with time zone,
    usercustomproperties        json
)",
    Array [],
  ],
  Array [
    "select action_timestamp from matomo order by action_timestamp desc limit 1",
  ],
  Array [
    "SELECT COUNT(distinct idvisit) FROM matomo WHERE action_timestamp::date='2021-09-02';",
  ],
  Array [
    "insert into matomo
        (idsite, idvisit, actions, country, region, city, operatingsystemname, devicemodel, devicebrand, visitduration, dayssincefirstvisit, visitortype, sitename, userid, serverdateprettyfirstaction, action_id, action_type, action_eventcategory, action_eventaction, action_eventname, action_eventvalue, action_timespent, action_timestamp, usercustomproperties)
        values ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13, $14, $15, $16, $17, $18, $19, $20, $21, $22, $23, $24)
        ON CONFLICT DO NOTHING",
    Array [
      "42",
      123,
      "2",
      "Argentine",
      "Buenos Aires",
      "Buenos Aires",
      "Mac",
      "Générique Bureau",
      "Inconnu",
      "300",
      "23",
      "returningCustomer",
      "tests",
      "24",
      "2021-08-20T21:55:12.000Z",
      "123_0",
      "event",
      "Ecommerce",
      "Cart change",
      "added - Basic Wetsuit",
      1,
      48,
      "2021-08-20T21:35:18.000Z",
      Object {
        "page-author": "Julien",
        "post-age": "-430 days",
      },
    ],
  ],
  Array [
    "insert into matomo
        (idsite, idvisit, actions, country, region, city, operatingsystemname, devicemodel, devicebrand, visitduration, dayssincefirstvisit, visitortype, sitename, userid, serverdateprettyfirstaction, action_id, action_type, action_eventcategory, action_eventaction, action_eventname, action_eventvalue, action_timespent, action_timestamp, usercustomproperties)
        values ($1, $2, $3, $4, $5, $6, $7, $8, $9, $10, $11, $12, $13, $14, $15, $16, $17, $18, $19, $20, $21, $22, $23, $24)
        ON CONFLICT DO NOTHING",
    Array [
      "42",
      123,
      "2",
      "Argentine",
      "Buenos Aires",
      "Buenos Aires",
      "Mac",
      "Générique Bureau",
      "Inconnu",
      "300",
      "23",
      "returningCustomer",
      "tests",
      "24",
      "2021-08-20T21:55:12.000Z",
      "123_1",
      "action",
      undefined,
      undefined,
      undefined,
      undefined,
      "2",
      "2021-08-20T21:30:25.000Z",
      Object {},
    ],
  ],
]
`;
